# image-color-analyzer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  mainwindow.cpp  mainwindow.h
icons/: palette.icns
